--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Sagonne</a>
+                <a class="text-dark" asp-area="" asp-controller="Home" asp-action="Portofolio">Portofolio</a>
                 <a class="text-dark" asp-area="" asp-controller="Home" asp-action="FileUpload">Ajout d'image</a>
             </div>
         </nav>
