Modification Affichage index et création page administration

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -10,7 +10,7 @@
 	}
 </style>
 <div class="row">
-	<div class="col-6 offset-3">
+	<div class="col-12">
 		<div class="container">
 			<div id="demo" class="carousel slide carousel-fade" data-ride="carousel">
 				<!-- Indicateurs -->
@@ -44,15 +44,17 @@
 		</div>
 	</div>
 </div>
-<br />
+
 <div class="row">
-	<div id="sandbox-container" class="row">
-		<div id="DatePicker"></div>
-		<div>
-			<input type="hidden" id="Date" />
+	<div class="col-xs-3 offset-md-3">		
+		<div id="sandbox-container">
+			<div id="DatePicker"></div>
+			<div>
+				<input type="hidden" id="Date" />
+			</div>
 		</div>
 	</div>
-	<div class="col-6 col-offset-3">
+	<div class="col-xs-4">
 		Evenement :
 		<div id="modal">
 		</div>
