--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -14,12 +14,11 @@
 			<div class="col-xs-6">
 				Login : <input type="text" name="login" id="login" asp-for="Login" /><br />
 				Mot de passe : <input type="password" name="mdp" id="mdp" asp-for="Mdp" /><br />
-				<input type="submit" value="Continuer" id="Continuer" />
-
 				<label>
+					Rester Connecté ?
 					<input type="checkbox" asp-for="KeepLoggedIn" />
-					Keep me logger In.
 				</label>
+				<input type="submit" value="Continuer" id="Continuer" />
 			</div>
 		</div>
 		<div class="row">
