--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -20,13 +20,13 @@
                 <a class="text-dark" asp-area="" asp-controller="Home" asp-action="Portofolio">Portofolio</a>
                 @if((await AuthorizationService.AuthorizeAsync(User,"IsAdmin")).Succeeded){
                     
-                    <a class="text-dark" asp-area="" asp-controller="Home" asp-action="FileUpload">Ajout d'image</a>
+                    <a class="text-dark" asp-area="" asp-controller="Home" asp-action="Administration">Administration</a>
                 }
                 <a class="text-dark" asp-area="" asp-controller="Home" asp-action="LogOut">Déconnexion</a>
             </div>
         </nav>
     </header>
-    <div class="container">
+    <div class="container-fluid">
         <main role="main" class="pb-3">
             @RenderBody()
         </main>
