Création d'un dateTimepicker

--- a/Views/Home/Administration.cshtml
+++ b/Views/Home/Administration.cshtml
@@ -32,7 +32,8 @@
             <div class="form-group">
                 Nom de l'évenement : <input type="text" name="NomEvent"/>
                 Description de l'évenement : <input type="text" name="DescriptionEvent"/>
-                <input id="datetimepicker" type="text" >
+                
+                <input id="DateEvent" type="text" >
 
                 <input type="submit" />
             </div>
@@ -47,11 +48,6 @@
         </form>
     </div>
 </div>
-
 @section Scripts{
     
-<script type="text/javascript">
-    
-    $('#datetimepicker').datetimepicker();
-</script>
 }
