--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -59,11 +59,27 @@
 		<div id="modal">
 		</div>
 	</div>
+</div>   
+
+<div class="row">
+    <div class='col-sm-6'>
+        <div class="form-group">
+        <div class='input-group date' id='datetimepicker1'>
+            <input type='text' class="form-control" />
+            <span class="input-group-addon">
+            <span class="glyphicon glyphicon-calendar">test</span>
+            </span>
+        </div>
+        </div>
+    </div>
 </div>
 
 @section Scripts {
 	<script>
 		$(document).ready(function () {
+			
+            $('#datetimepicker1').datetimepicker();
+
 			$('#DatePicker').datepicker({
 				language: "fr",
 				todayHighlight : true
