--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="~/css/bootstrap-datetimepicker.min.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
 	<link rel="stylesheet" href="~/Sagonne.styles.css" asp-append-version="true" />
+    <script src="https://kit.fontawesome.com/cc1876972d.js" crossorigin="anonymous"></script>
     
 </head>
 <body>
