Modification et ajout du trombinoscope

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -21,6 +21,7 @@
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Sagonne</a>
                 <a class="text-dark" asp-area="" asp-controller="Home" asp-action="Portofolio">Portofolio</a>
+                <a class="text-dark" asp-area="" asp-controller="Home" asp-action="Trombinoscope">Trombinoscope</a>
                 @if((await AuthorizationService.AuthorizeAsync(User,"IsAdmin")).Succeeded){
                     
                     <a class="text-dark" asp-area="" asp-controller="Home" asp-action="Administration">Administration</a>
