--- a/Views/Home/Portofolio.cshtml
+++ b/Views/Home/Portofolio.cshtml
@@ -2,6 +2,11 @@
     ViewData["Title"] = "Home Page";
 }
 @model PortofolioModel
+
+
+@*Basculer sur des card de bootstrap*@
+
+
 <div class="row">
     @foreach(KeyValuePair<string,string> Annee in Model.Annees)
     {
