--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@
 					@for (int i = 0; i < Model.Caroussel.Length; i++)
 					{
 						<div class="carousel-item @(i == 0 ? "active":"")">
-							<img src="~/@Model.Caroussel[i]" alt="Caroussel slide @i" class="d-block">
+							<img src="~/@Model.Caroussel[i]" alt="Caroussel slide @i" class="d-block imgCarrousel">
 						</div>
 					}
 				</div>
