--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -17,7 +17,7 @@ body {
   margin-bottom: 60px;
 }
 
-img{
+.imgCarrousel{
     margin-left: auto;
     margin-right: auto;
 }
@@ -62,10 +62,6 @@ img{
         width: 25%;
         float: left;
     }
-
-        .div-matrix-4 > div > * {
-            height: 100%;
-        }
 
         .div-matrix-4 > div:nth-child(4n+5) {
             clear: left;
